--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>261</title>
     <link rel="icon" type="image/png" href="/favicon.png" />
 
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/themes/default/style.min.css">
 
-    <script src="/script.js"></script>
+    <script src="/script/jquery-3.4.1.js"></script>
+    <script src="/script/jstree.js"></script>
+    <script src="/script/main.js"></script>
 </head>
+
 <body>
     <div class="m-container">
-        <menu class="m-menu">sdf</menu>
+        <menu class="m-menu">
+        <div class="m-menu-header">
+            Header
+        </div>
+        </menu>
         <main class="m-main">asdf</main>
     </div>
 </body>
+
 </html>
