--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,32 @@
 
 <body>
     <div class="m-container">
+        <!-- Mene -->
         <menu class="m-menu">
-        <div class="m-menu-header">
-            Header
-        </div>
+            <!-- Title and Logo -->
+            <div class="m-menu-header">
+                <div class="m-menu-header-logo">
+                    <img src="/images/russia-tank.png" alt="" srcset="">
+                </div>
+                <div class="m-menu-header-title">Каталог</div>
+            </div>
+            <!-- Menu -->
+            <div class="m-menu-three">
+                <div id="jstree">
+                    <ul>
+                        <li>Root node 1
+                            <ul>
+                                <li id="child_node_1">Child node 1</li>
+                                <li>Child node 2</li>
+                            </ul>
+                        </li>
+                        <li>Root node 2</li>
+                    </ul>
+                </div>
+            </div>
         </menu>
+
+
         <main class="m-main">asdf</main>
     </div>
 </body>
