--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
             </div>
             <!-- Menu -->
             <div class="m-menu-three">
-                <div id="jstree">
+                <div id="tree">
                     <ul>
                         <li>Root node 1
                             <ul>
