--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <script src="/script.js"></script>
-    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    sd
-    sfg
+    <div class="m-container">
+        <menu class="m-menu">sdf</menu>
+        <main class="m-main">asdf</main>
+    </div>
 </body>
 </html>
