--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,13 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
 
     <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/themes/default/style.min.css">
+    <link rel="stylesheet" href="/css/content-tools.min.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <script src="/script/jquery-3.4.1.js"></script>
     <script src="/script/jstree.js"></script>
+    <script src="/script/content-tools.js"></script>
     <script src="/script/main.js"></script>
 </head>
 
@@ -36,7 +38,17 @@
         </menu>
 
 
-        <main class="m-main">asdf</main>
+        <main class="m-main">
+            <input class="m-main-title" type="text" name="FirstName" value="Mickey">
+            <main data-editable data-name="main-content" class="m-main-text">
+                <!-- editable main-content -->
+
+                <h1>Welcome to my website</h1>
+                <p>It's nice here</p>
+
+                <!-- endeditable main-content -->
+            </main>
+        </main>
     </div>
 </body>
 
