--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/themes/default/style.min.css">
     <link rel="stylesheet" href="/css/content-tools.min.css">
+    <link rel="stylesheet" href="/css/site.css">
     <link rel="stylesheet" href="/css/style.css">
 
     <script src="/script/jquery-3.4.1.js"></script>
@@ -40,14 +41,7 @@
 
         <main class="m-main">
             <input class="m-main-title" type="text" name="FirstName" value="Mickey">
-            <main data-editable data-name="main-content" class="m-main-text">
-                <!-- editable main-content -->
-
-                <h1>Welcome to my website</h1>
-                <p>It's nice here</p>
-
-                <!-- endeditable main-content -->
-            </main>
+            <main data-editable data-name="main-content formatted" class="m-main-text"></main>
         </main>
     </div>
 </body>
