--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,12 @@
 
 
         <main class="m-main">
-            <input class="m-main-title" type="text" name="FirstName" value="Mickey">
-            <main data-editable data-name="main-content formatted" class="m-main-text"></main>
+            <!-- <input class="m-main-title" type="text" value="Название"> -->
+            <main data-editable data-name="formatted" class="m-main-text formatted">
+                 <p>
+                     Содержимое
+                 </p>
+            </main>
         </main>
     </div>
 </body>
