--- a/public/index.html
+++ b/public/index.html
@@ -18,22 +18,22 @@
     <div class="m-container">
         <ul>
             <li>
-                <a href="/tree.htmp?1">1</a>
+                <a href="/tree.html?1">1</a>
             </li>
             <li>
-                <a href="/tree.htmp?2">2</a>
+                <a href="/tree.html?2">2</a>
             </li>
             <li>
-                <a href="/tree.htmp?3">3</a>
+                <a href="/tree.html?3">3</a>
             </li>
             <li>
-                <a href="/tree.htmp?4">4</a>
+                <a href="/tree.html?4">4</a>
             </li>
             <li>
-                <a href="/tree.htmp?5">5</a>
+                <a href="/tree.html?5">5</a>
             </li>
             <li>
-                <a href="/tree.htmp?6">6</a>
+                <a href="/tree.html?6">6</a>
             </li>
         </ul>
     </div>
