--- a/public/tree.html
+++ b/public/tree.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/themes/default/style.min.css">
     <link rel="stylesheet" href="/css/content-tools.min.css">
     <link rel="stylesheet" href="/css/site.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
 
     <script src="/script/jquery-3.4.1.js"></script>
@@ -27,7 +28,7 @@
             <!-- Title and Logo -->
             <div class="m-menu-header">
                 <div class="m-menu-header-logo">
-                    <img src="/images/russia-tank.png" alt="" srcset="">
+                    <img src="/images/guap.png" alt="" srcset="">
                 </div>
                 <div class="m-menu-header-title">Каталог</div>
             </div>
