--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,7 @@
         <div class="elem">
             <a href="/tree.html?1">
                 <figure class="snip1566">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample14.jpg" alt="sq-sample14" />
+                    <img src="/images/index/1.jpg" alt="sq-sample14" />
                     <figcaption><i class="glyphicon glyphicon-file"></i></figcaption>
                 </figure>
 
@@ -183,7 +183,7 @@
         <div class="elem">
             <a href="/tree.html?5">
                 <figure class="snip1566">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample14.jpg" alt="sq-sample14" />
+                    <img src="/images/index/2.jpg" alt="sq-sample14" />
                     <figcaption><i class="glyphicon glyphicon-file"></i></figcaption>
                 </figure>
 
@@ -194,7 +194,7 @@
         <div class="elem">
             <a href="/tree.html?6">
                 <figure class="snip1566">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample14.jpg" alt="sq-sample14" />
+                    <img src="/images/index/3.jpg" alt="sq-sample14" />
                     <figcaption><i class="glyphicon glyphicon-file"></i></figcaption>
                 </figure>
 
@@ -205,7 +205,7 @@
         <div class="elem">
             <a href="/tree.html?9">
                 <figure class="snip1566">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample14.jpg" alt="sq-sample14" />
+                    <img src="/images/index/4.jpg" alt="sq-sample14" />
                     <figcaption><i class="glyphicon glyphicon-file"></i></figcaption>
                 </figure>
 
@@ -216,7 +216,7 @@
         <div class="elem">
             <a href="/tree.html?10">
                 <figure class="snip1566">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample14.jpg" alt="sq-sample14" />
+                    <img src="/images/index/5.jpg" alt="sq-sample14" />
                     <figcaption><i class="glyphicon glyphicon-file"></i></figcaption>
                 </figure>
 
@@ -227,7 +227,7 @@
         <div class="elem">
             <a href="/tree.html?14">
                 <figure class="snip1566">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample14.jpg" alt="sq-sample14" />
+                    <img src="/images/index/6.jpg" alt="sq-sample14" />
                     <figcaption><i class="glyphicon glyphicon-file"></i></figcaption>
                 </figure>
 
