--- a/public/tree.html
+++ b/public/tree.html
@@ -28,7 +28,9 @@
             <!-- Title and Logo -->
             <div class="m-menu-header">
                 <div class="m-menu-header-logo">
-                    <img src="/images/guap.png" alt="" srcset="">
+                    <a href="/">
+                        <img src="/images/guap.png" alt="" srcset="">
+                    </a>
                 </div>
                 <div class="m-menu-header-title">Каталог</div>
             </div>
@@ -42,9 +44,9 @@
 
         <main class="m-main">
             <main data-editable data-name="formatted" class="m-main-text formatted">
-                 <p>
-                     Содержимое
-                 </p>
+                <p>
+                    Содержимое
+                </p>
             </main>
         </main>
     </div>
